<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">计算器</string>
    <string name="action_settings">Settings</string>
    <string name="clearButton">C</string>
    <string name="divButton">÷</string>
    <string name="multiplyButton">×</string>
    <string name="deleteButton">delete</string>
     <string name="sevenButton">7</string>
    <string name="eightButton">8</string>
    <string name="nineButton">9</string>
    <string name="minusButton">-</string>
     <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="plusButton">+</string>
     <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="parenButton">()</string>
     <string name="zeroButton">0</string>
    <string name="pointButton">.</string>
    <string name="plus_minusButton">+/-</string>
    <string name="equalButton">=</string>
    

</resources>
