<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="200dip"
        android:orientation="horizontal"
        
        >

    <EditText
        android:id="@+id/editText"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:imeOptions="actionSearch"
        android:textSize="30dip"
        />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.example.views.MyButton 
            android:id="@+id/clearButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/clearButton"
            />
        <com.example.views.MyButton 
            android:id="@+id/divButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/divButton"
            />
        <com.example.views.MyButton  
            android:id="@+id/multiplyButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/multiplyButton"
            />
        <com.example.views.MyButton 
            android:id="@+id/deleteButton"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/deleteButton"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.example.views.MyButton 
            android:id="@+id/sevenButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/sevenButton"
            />
        <com.example.views.MyButton 
            android:id="@+id/eightButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/eightButton"
            />
        <com.example.views.MyButton  
            android:id="@+id/nineButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/nineButton"
            />
        <com.example.views.MyButton  
            android:id="@+id/minusButton"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/minusButton"
            />
    </LinearLayout>
       <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.example.views.MyButton 
            android:id="@+id/fourButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/fourButton"
            />
        <com.example.views.MyButton 
            android:id="@+id/fiveButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/fiveButton"
            />
        <com.example.views.MyButton  
            android:id="@+id/sixButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/sixButton"
            />
        <com.example.views.MyButton 
            android:id="@+id/plusButton"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/plusButton"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.example.views.MyButton  
            android:id="@+id/oneButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/oneButton"
            />
        <com.example.views.MyButton 
            android:id="@+id/twoButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/twoButton"
            />
        <com.example.views.MyButton 
            android:id="@+id/threeButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/threeButton"
            />
        <com.example.views.MyButton  
            android:id="@+id/parenButton"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/parenButton"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.example.views.MyButton  
            android:id="@+id/zeroButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/zeroButton"
            />
        <com.example.views.MyButton  
            android:id="@+id/pointButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/pointButton"
            />
        <com.example.views.MyButton 
            android:id="@+id/plus_minusButton"
            android:layout_width="75dip"
            android:layout_height="wrap_content"
            android:text="@string/plus_minusButton"
            />
        <com.example.views.MyButton  
            android:id="@+id/equalButton"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/equalButton"
            />
    </LinearLayout>
    

</LinearLayout>
